<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.dota2progresstracker.LearnDotaActivity"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/what_is_dota"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>


    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/learn_about_heroes_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/learn_about_heroes"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/learn_about_heroes_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/learn_about_heroes_desc"
                android:textColor="@android:color/holo_red_light"
                android:layout_below="@id/learn_about_heroes_heading"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/learn_about_heroes_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="showHeroes"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:textColor="@android:color/holo_red_dark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/learn_about_items_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/learn_about_items"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>
            <TextView
                android:id="@+id/learn_about_teams_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/learn_about_items_desc"
                android:textColor="@android:color/holo_red_light"
                android:layout_below="@id/learn_about_items_heading"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/learn_about_items_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="showItems"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
