<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/item_details"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Headings"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/item_name_heading"/>
            <TextView
                android:id="@+id/item_name"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/Headings"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/item_cost_heading"/>
            <TextView
                android:id="@+id/item_cost"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gold_icon"
                android:layout_marginTop="6dp"/>
            <TextView
                style="@style/Headings"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/item_shop_heading"/>
            <TextView
                android:id="@+id/item_shop"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>