<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.dota2progresstracker.ItemDetailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_details_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headings"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/item_name_heading" />

                <TextView
                    android:id="@+id/item_details_name"
                    style="@style/Content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headings"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/item_cost_heading" />

                <TextView
                    android:id="@+id/item_details_cost"
                    style="@style/Content"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAllCaps="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/gold_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headings"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/item_shop_heading" />

                <TextView
                    android:id="@+id/item_shop_name"
                    style="@style/Content"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Headings"
        android:padding="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_desc_heading"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/Content"
        android:id="@+id/item_details_desc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/Content"
        android:id="@+id/item_details_stats_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/Content"
        android:id="@+id/item_details_stats_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/Content"
        android:id="@+id/item_details_stats_3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        style="@style/Content"
        android:id="@+id/item_details_stats_4"/>
</LinearLayout>
